# mdbook-plantuml

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  foobar.json
.github/: dependabot.yml
.github/workflows/: CI.yml  coverage.yml
doc/img/: conversion_sequence.puml
scripts/: README.md
scripts/msi_installer/: .gitignore  Package.wxs  README.md  create_installer.ps1
src/: backend.rs  base64.rs  base64_plantuml.rs  cache.rs  cache_cleaner.rs  config.rs  dir_cleaner.rs  errors.rs  include_iterator.rs  legacy_markdown_plantuml_pipeline.rs  lib.rs  main.rs  markdown_iterator.rs  markdown_plantuml_pipeline.rs  pipeline.rs  plantuml.rs  plantuml_backend.rs  plantuml_backend_factory.rs  plantuml_cmdline_backend.rs  plantuml_renderer.rs  plantuml_server_backend.rs  plantuml_shell_backend.rs  plantumlconfig.rs  renderer.rs  util.rs
src/backend/: factory.rs  server.rs  shell.rs
tests/: .gitignore  README.md  requirements.txt  run_regression_tests.bat  run_tests.bat  run_tests.ps1  run_tests.sh
tests/e2e_test/: .gitignore  README.md  e2e_tester.py  plantuml_cache.toml  plantuml_dir_cleaner.toml  plantuml_server.toml  plantuml_server_datauri.toml  plantuml_shell.toml  plantuml_shell_clickable.toml  plantuml_shell_datauri.toml  plantuml_shell_not_piped.toml  quicktest.bat  regression_tester.py  test.bat  test_e2e.py
tests/e2e_test/src/: SUMMARY.md  chapter_1.md  end_fence_too_small.md  formats.md  unclosed_code_block.md
tests/e2e_test/src/includes/: include.puml  includes.md  includesub.puml
tests/e2e_test/src/nested/: nested_chapter.md
tests/e2e_test/test_book/: book.toml
tests/e2e_test/test_book/src/: chapter_1.md
tests/e2e_test/test_server/: book.toml
tests/e2e_test/test_server/book/: chapter_1.html  index.html  print.html  searchindex.js  searchindex.json
tests/e2e_test/test_server/book/img/: 5f7e08d3-1185-45ff-b2ec-b61de249e59d.puml  789bcae7-d1e1-48f2-a064-20f4e1b8721a.puml  a5740315-2e91-4237-8a82-329559a068d9.puml  e88daed7-d6c9-4c53-954e-c884fed7b5ef.puml
tests/e2e_test/test_server/src/: chapter_1.md
tests/e2e_test/uml1/: class.puml
tests/regression_test/: .gitignore  book.json  fake_plantuml.py  file_locations.py  markdown_snippets.py  preprocessor_runner.py  requirements.txt  shell_backend_tester.py  shell_command.py  test_shell_backend.py
tests/regression_test/regenerate_book_json/: book.toml  regeneration_preprocessor.py
tests/shared_modules/: preprocessor_builder.py
