[package]
name = "mdbook-plantuml"
version = "0.8.0"
authors = ["Sytse Reitsma <mdbook-plantuml@sreitsma.nl>"]
description = "A preprocessor for mdbook which will convert plantuml code blocks into inline SVG diagrams"
license = "MIT"
documentation = "https://docs.rs/mdbook-plantuml"
repository = "https://github.com/sytsereitsma/mdbook-plantuml"
readme = "README.md"
keywords = ["mdbook", "plantuml", "markdown", "commonmark"]
exclude = [
    "tests/e2etest",
]
edition = "2024"
rust-version = "1.88.0"

[features]
default = ["plantuml-ssl-server"]
plantuml-server=["reqwest", "deflate"]
plantuml-ssl-server=["reqwest/rustls-tls", "deflate"]

[dependencies]
mdbook = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
clap = { version = "4.0", features = ["derive"] }
log4rs = "1.1.1"
reqwest = { version = "0.12", optional = true, features = ["blocking"], default-features = false }
deflate = { version = "1.0", optional = true }
sha1 = "0.10"
base64 = "0.22"
anyhow = "1.0"
tempfile = "3.20"
base16ct = { version = "0.2", features = ["alloc"] }
shlex = "1.3"
dunce = "1.0" # Alternative for std::Path::canonicalize that produces the regular paths on windows (instead of UNC paths)

[dev-dependencies]
pretty_assertions = "1.4"
simulacrum = "0.3"
