[package]
name = "mdbook-plantuml"
version = "2.0.0"
authors = ["Sytse Reitsma <mdbook-plantuml@sreitsma.nl>"]
description = "A preprocessor for mdbook which will convert plantuml code blocks into inline SVG diagrams"
license = "MIT"
documentation = "https://docs.rs/mdbook-plantuml"
repository = "https://github.com/sytsereitsma/mdbook-plantuml"
readme = "README.md"
keywords = ["mdbook", "plantuml", "markdown", "commonmark"]
exclude = [
    "tests/e2etest",
]
edition = "2024"
rust-version = "1.88.0"

[features]
default = ["plantuml-ssl-server"]
plantuml-server=["reqwest", "deflate"]
plantuml-ssl-server=["reqwest/rustls-tls","reqwest/rustls-tls-native-roots" ,"deflate"]

[dependencies]
mdbook-preprocessor = { version = "0.5", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
# log4rs 1.3.0 and above do not pass the e2e tests. Logging appears in the stdout feedback to mdbook. Created a PR (#429) with the fix in log4rs
log4rs = "=1.2.0"
reqwest = { version = "0.12.24", optional = true, features = ["blocking"], default-features = false }
deflate = { version = "1.0.0", optional = true }
sha1 = "0.10.6"
base64 = "0.22.1"
anyhow = "1.0.100"
tempfile = "3.23.0"
base16ct = { version = "0.3.0", features = ["alloc"] }
shlex = "1.3.0"
dunce="1.0.5" # Alternative for std::Path::canonicalize that produces the regular paths on windows (instead of UNC paths)
regex = "1.12.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
simulacrum = "0.3.1"
